# bicchiere

./: .gitattributes  .gitignore  README.es.md  README.it.md  README.md  bicchiere.py  build.sh  build_bicchiere.py  get_version.py  make.py  pyproject.toml  wstest2.py
cgi-bin/: cgiform.py  hello.py  noexec.py
examples/: plastic.py  run_uwsgi  templite.py  testb.py
oven/: activate.py  badges.md  chat_room.py  chat_room_native.py  deprecated.py  events.py  mount_test.py  patch_hoppish.py  requirements.txt  run_bjoern.py  run_gunicorn.py  session.py  stuff.py  template.py  testcgiform.py  websocket_test.py  wsocket.py  wstest.py  wstest2.py
oven/asgi/: asgiserver.py  websocket_msg.json
oven/asgi/echoapp/: asgi_app.py  http_response.py  websocket_response.py
oven/asgi/server/: app.py  p00_tcp_echo_server.py  p01_asyncio_echo_server.py  p02_protocol_echo_server.py  p05_simple_httpserver.py  p06_simple_httpserver.py  p07_simple_httpserver.py  p08_first_wsgiserver.py  p09_second_wsgiserver.py  p10_third_wsgiserver.py  p11_first_asgiserver.py
oven/cgi-bin/: hello.py  hello.sh
oven/deprecated/: wstest.py
oven/pusher/: index.py
oven/pusher/static/: index.html
oven/templates/: chat_room.html  websocket_test.html
src/: LICENSE  README.md  bicchiere.py  pyproject.toml
static/: Not_found_404.html
static/img/: bicchiere-rosso-2.b64  bicchiere-rosso-2.html
templates/: navbar-dropdown-menu.html  test_tpl.html
